# postern

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Jenkinsfile  NOTICE  PRIVACY-COMMITMENT.md  PRIVACY.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/scripts/: d1-migration-gate.mjs  dispatch-fleet-postern-door-roll.sh
.github/workflows/: ci.yml  code-coverage-ts.yml  deploy.yml  imap-image.yml  npm-deprecate-unscoped.yml  npm-mcp.yml  publish-pypi.yml  relay-image.yml  release.yml  smoke-staging.yml  typecheck.yml
clients/python/: .env.example  README.md  pyproject.toml
clients/python/postern_client/: __init__.py  __main__.py  cli.py  client.py
clients/python/postern_client/tests/: __init__.py  test_cli.py  test_client.py
docs/: AUTH-CONTRACT.md  CONTRACT.md  GO-LIVE.md  IMAP-APPLE-MAIL.md  INTEGRATION.md  MTA-STS.md  OPERATIONS.md  PROXY-PROTOCOL.md  SEND-IDENTITIES.md  WEBMAIL-V2-RELEASE.md  architecture.md  reconcile-orphan-vectors.md
docs/design/: webmail-v2-contracts.md
docs/reviews/: fable-product-gap-review-2026-07-17.md  webmail-v2-phase6-adversarial-2026-07-18.md
imap/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  MEASUREMENT.md  README.md  docker-entrypoint.sh  pyproject.toml
imap/posternimap/: __main__.py  account.py  auth.py  client.py  config.py  mailbox.py  measure.py  message.py  proxyproto.py  proxywrap.py  rfc822.py  server.py  throttle.py
imap/posternimap/tests/: fakes.py  test_auth.py  test_auth_backends.py  test_client.py  test_config.py  test_http_transport.py  test_mailbox.py  test_measure.py  test_measure_integration.py  test_per_account.py  test_proxyproto.py  test_proxywrap.py  test_rfc822.py  test_server_e2e.py  test_throttle.py  test_tls.py
imap/smoke/: emit_sanity.py  measure_capture.py
imap/systemd/: postern-imap.service
inbound/: README.md  aisearch.test.ts  api.test.ts  attachments-reply.test.ts  attachments-send.test.ts  attachments.test.ts  body-cap.test.ts  body-html.test.ts  delete.test.ts  draft-attachments.test.ts  durable-mailboxes-sql.test.ts  durable-mailboxes.test.ts  envelope-v2.test.ts  fakes.ts  from-header.test.ts  ingest-fuzz.test.ts  ingest-route.test.ts  ingest.test.ts  mailbox.test.ts  mobileconfig.test.ts  mtasts.test.ts  package-lock.json  package.json  per-identity-send.test.ts  projected-size.test.ts  read.test.ts  recipient-lenses.test.ts  reconcile.mjs  reconcile.test.ts  reindex.mjs  reindex.test.ts  relay-transport.test.ts  sanitize-html.test.ts  schema.sql  scopes.test.ts  search-filters.test.ts  search-from.test.ts  seed.dev.sql  seen.test.ts  session.test.ts  (+10 more)
inbound/migrations/: 0000_base_schema.sql  0001_attachments_fts_dmarc.sql  0002_direction_thread.sql  0003_body_html.sql  0004_smtp_credentials.sql  0005_messages_autoincrement_uid.sql  0006_envelope_v2.sql  0007_seen.sql  0008_vector_ledger.sql  0009_seen_by_recipient.sql  0010_webmail_sessions.sql  0011_durable_mailboxes.sql  0012_projected_size.sql  0013_draft_attachments.sql
inbound/scripts/: setup-email-routing.mjs  sync-webmail.mjs
inbound/src/: api.ts  body.ts  env.d.ts  headers.ts  index.ts  ingest.ts  mailbox.ts  mobileconfig.ts  mtasts.ts  rfc822Project.ts  sanitize-html.ts  sendidentity.ts  session.ts  smtpcreds.ts  store.ts  webmail.ts
inbound/src/transport/: cf.ts  index.ts  relay.ts
mcp/: .env.example  LICENSE  PROOF-per-identity-send.md  README.md  package-lock.json  package.json  tsconfig.json
mcp/scripts/: stdio-smoke.mjs
mcp/src/: client.ts  index.ts  tools.ts  types.ts
mcp/test/: client.test.ts  send-tools.test.ts  send.test.ts  smoke.test.ts  tools.test.ts
relay/: .dockerignore  Dockerfile  README.md  SUBMISSION-DEPLOY.md  attachments_dispatch_test.go  auth.go  auth_ldap.go  auth_ldap_pin_test.go  auth_ldap_test.go  auth_ldap_timeout_test.go  auth_ldap_tls_test.go  auth_system.go  auth_system_pam.go  auth_system_select_default_test.go  auth_system_select_pam_test.go  auth_test.go  cert.go  cert_test.go  client.go  config.go  config_test.go  docker-entrypoint.sh  go.mod  go.sum  http.go  http_test.go  ingest.go  ingest_test.go  main.go  mime_fuzz_test.go  mime_parts.go  postern-submission.env.example  proxyproto.go  proxyproto_test.go  sasl_login.go  skyphusion-email-relay.env.example  smtp.go  smtp_test.go  smtp_transport.go  smtp_transport_tls_test.go  (+11 more)
relay/systemd/: postern-submission.service  skyphusion-email-relay.service
webmail/: COMPOSE-SPEC.md  COMPOSE.md  README.md  index.html
webmail/e2e/: package-lock.json  package.json  playwright.config.ts
webmail/e2e/tests/: critical-journeys.spec.ts
worker/: body.test.ts  package-lock.json  package.json  smoke.test.ts  wrangler.jsonc
worker/src/: email.ts  env.d.ts  index.ts
